--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 device: /dev/ttyUSB0
 zmq:
   publisher:
-    host: 0.0.0.0
+    host: 127.0.0.1
     port: 5680
-#   dispatcher:
-#     host: 0.0.0.0
-#     port: 5681
+  dispatcher:
+    host: 127.0.0.1
+    port: 5681
